# socket-example

./: .clang-format  .gitignore  CMakeLists.txt
src/: clientinfo.h  clientsession.cpp  clientsession.h  datachannel.cpp  datachannel.h  ftpcmd.cpp  ftpcmd.h  main.cpp  response.cpp  response.h  server.cpp  server.h  threadpool.cpp  threadpool.h
test/: CMakeLists.txt  testbywrt.cpp  testpool.cpp  testserver.cpp
